<resources>
    <string name="app_name">LifeTracker NiSo</string>
    <string name="to_do_string">ToDo</string>
    <string name="calendar_string">Calendar</string>
    <string name="budget_string">Budget</string>
    <string name="me_string">me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_photo_description">user photo</string>
    <string name="tasks_overview">Tasks Overview</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="finished_tasks">Finished Tasks</string>
    <string name="spinner_name">Press to edit</string>
    <string name="button_appear">Button Makes Edit Possible</string>
    <string name="add_savings">Add Savings</string>
    <string name="edit_button">Edit Savings</string>
    <string name="delete_button">Delete Savings</string>
    <string name="budget_label">Name</string>
    <string name="budget_up_to_now">Savings up to now</string>
    <string name="budget_end">End goal</string>
    <string name="enter_add_number">Enter the amount you wish to add</string>
    <string name="enter_sub_number">Enter the amount you wish to subtract</string>
    <string name="delete_budget_item">Are you sure you want to delete this?</string>
    <string name="delete_all_caps_button">DELETE</string>
    <string name="take_new_photo">Take a new photo</string>
    <string name="choose_gallery_photo">Choose photo from gallery</string>
    <string name="add_user_name">Please add your name:</string>
    <string name="saved_username_text_key">com.example.lifetracker.PREFERENCE_FILE_KEY</string>
    <string name="default_username_text">User!\nClick here to change your name.</string>

    <!--to toggle the open close button of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="edit_string">Edit</string>
    <string name="what_are_you_saving_up_for">What are you saving up for?</string>
    <string name="your_savings_up_to_now">Your savings up to now</string>
    <string name="your_end_goal">Your end goal</string>
    <string name="due_date">Due date</string>
    <string name="add">Add</string>
    <string name="clear_due_date_field">clear due date field</string>
    <string name="you_are_adding">You are adding:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="to_do_description">To Do description</string>
    <string name="label">Label</string>
    <string name="reminder">Reminder</string>
    <string name="clear_reminder_field">clear reminder field</string>
    <string name="your_name_is">Your name is</string>
    <string name="take_a_new_photo_camera">Take a new photo</string>
    <string name="add_a_photo_from_gallery">Add a photo from Gallery</string>
    <string name="you_are_subtracting">You are subtracting:</string>
    <string name="plus_button">plus button</string>
    <string name="_20000_9000000">20000€/9000000€</string>
    <string name="_60">60%</string>
    <string name="_24_5_21">24/5/21</string>
    <string name="todo_list_item_description_name">todo list item description/name</string>
    <string name="show_edit_and_delete">show Edit and delete</string>
</resources>