<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CCC3CF">

    <TextView
        android:id="@+id/textViewSubtractMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/you_are_subtracting"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSubtractAmountToBudget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4b4475"
        android:drawableEnd="@drawable/euro_icon"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/enter_sub_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHighlight="#786574"
        android:textColorHint="#000000"
        android:textColorLink="#786574"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtractMoney"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonCancelSubtractMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#000000"
        android:text="@string/cancel"
        android:textColor="#DDCBE3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSubtractAmountToBudget"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSaveSubtractMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#000000"
        android:text="@string/save"
        android:textColor="#DDCBE3"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCancelSubtractMoney"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCancelSubtractMoney" />

</androidx.constraintlayout.widget.ConstraintLayout>